Dev. Stage 1 - complete

--- a/src/components/navbar/navbar.twig
+++ b/src/components/navbar/navbar.twig
@@ -21,7 +21,8 @@
 {% set placement = placement ?? '' %}
 {% set color = color ?? 'light' %}
 
-<nav class="navbar navbar-expand-lg justify-content-between navbar-{{ color }} {{ placement }} {{ utility_classes|join(' ') }}">
+<nav class="navbar navbar-expand-lg justify-content-between navbar-{{ color }} {{ placement }} {{ utility_classes|join(' ') }}">aaa
+container {{ container }}
   {% if container %}
     <div class="{{ container }}">
   {% endif %}
