--- a/src/sass/block/_menu.scss
+++ b/src/sass/block/_menu.scss
@@ -1,3 +1,26 @@
-.menu-item-cta {
-    box-shadow: inset 0 0 0 1px $dark;
+.navbar-expand-lg .navbar-nav {
+    .nav-item {
+        @include media-breakpoint-up(lg) {
+            margin-left: $m;
+        }
+    }
+    .nav-link {
+        border-radius: $border-radius-lg;
+        @include media-breakpoint-down(md) {
+            padding-left: $m;
+            padding-right: $m;
+        }
+
+        &.menu-item-cta {
+            box-shadow: inset 0 0 0 2px $dark;
+            @include media-breakpoint-up(lg) {
+                padding-left: $m;
+                padding-right: $m;
+            }
+        }
+        &.active, &.is-active, &:active, &:focus {
+            @extend .btn-primary;
+            color: $white;
+        }
+    }
 }
