--- a/src/sass/entero.style.scss
+++ b/src/sass/entero.style.scss
@@ -61,4 +61,9 @@
 
 // Custom
 // -----------------------------------------------------------------------------
+@import "layout/page";
 @import "block/menu";
+
+// Unique to this project
+// -----------------------------------------------------------------------------
+@import "custom/custom";
